testsuite/poke.pkl/array-diag-2.pk
/* { dg-do compile } */

["foo", "bar"]U; /* { dg-error "array elements not promoteable to uint" } */
